PyMaker/datas/object2/RawHTML/i1601/Python_DOC_referPages.can-not-import-tweepy-for-python.txt
<div class="post-text" itemprop="text">
<p>Using jupyter notebook</p>
<pre><code>import tweepy
</code></pre>
<p>However, i get the following error message</p>
<pre><code>Traceback (most recent call last):

  File "C:\ProgramData\Anaconda3\lib\site-packages\IPython\core\interactiveshell.py", line 2961, in run_code
    exec(code_obj, self.user_global_ns, self.user_ns)

  File "&lt;ipython-input-2-f5e4f2180e08&gt;", line 1, in &lt;module&gt;
    import tweepy

  File "C:\ProgramData\Anaconda3\lib\site-packages\tweepy-3.6.0-py3.7.egg\tweepy\__init__.py", line 17, in &lt;module&gt;
    from tweepy.streaming import Stream, StreamListener

  File "C:\ProgramData\Anaconda3\lib\site-packages\tweepy-3.6.0-py3.7.egg\tweepy\streaming.py", line 358
    def _start(self, async):
                         ^
SyntaxError: invalid syntax
</code></pre>
<p>What do I do to resolve this problem? When i run conda list in command prompt, it says. </p>
<pre><code># Name                    Version                   Build  Channel
    tweepy                    3.6.0                     &lt;pip&gt;
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p><code>async</code> may not be used as an argument name in Python 3.7.</p>
<p>See: <a href="https://docs.python.org/3/whatsnew/3.7.html#summary-release-highlights" rel="nofollow noreferrer">https://docs.python.org/3/whatsnew/3.7.html#summary-release-highlights</a></p>
<blockquote>
<p><strong>async</strong> and <strong>await</strong> are now reserved keywords.</p>
</blockquote>
<p>This issue is already known: <a href="https://github.com/tweepy/tweepy/issues/1017" rel="nofollow noreferrer">https://github.com/tweepy/tweepy/issues/1017</a></p>
<p>The current recommendation is to manually rename all occurrences of <code>async</code> to <code>async_</code> in /tweepy/streaming.py until a new release is available.</p>
</div>
